# transcribe-youtube-video

./: .gitignore  README.md  audio.py  main.py  pyproject.toml  requirements.txt  transcription.py
texts/: The Evolution of Snakes_raw.txt  The Evolution of Snakes_raw_formatado.txt  The Evolution of Spiders_raw.txt  The Evolution of Spiders_raw_formatado.txt  Writing Strong Characters - The Important Distinction Between Want and Need_raw.txt  Writing Strong Characters - The Important Distinction Between Want and Need_raw_formatado.txt  the_duality_of_gacha_content_creators_raw.txt  the_duality_of_gacha_content_creators_raw_formatado.txt
